--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 }
 
 h1, h2 {
-  font-family: 'Rubik';
+  font-family: 'Rubik', sans-serif;
+  color: var(--primary-blue-color);
 }
 
 a, p {
@@ -46,4 +47,22 @@ nav a:first-child {
   padding: 8px 16px;
   border-radius: 24px;
   font-weight: bold;
+}
+
+.logo-illustration {
+  width: 50px;
+}
+
+.banner {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.banner .illustration {
+  width: 150px;
+}
+
+.banner div:first-child {
+  width: 30%;
 }
